--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -23,15 +23,19 @@
       </span>
     </div>
 
-  
+  <% if user_signed_in? %>  
+   <% if current_user.id == @item.user_id %>  
     <%= link_to "商品の編集", "#", method: :get, class: "item-red-btn" %>
     <p class="or-text">or</p>
     <%= link_to "削除", "#", method: :delete, class:"item-destroy" %>
+   <% elsif @item != nil %>
     <%= link_to "購入画面に進む", "#" ,class:"item-red-btn"%>
- 
+    <% end %>
+  <% end %>
 
     <%# //ログインしているユーザーと出品しているユーザーが、同一人物の場合と同一人物ではない場合で、処理を分けましょう %>
-  
+
+
     <div class="item-explain-box">
       <span><%= @item.descriptions %></span>
     </div>
