--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -132,7 +132,7 @@
         <div class='item-img-content'>
           <%= image_tag item.image, class: "item-img" %>
 
-          <% if @item  != nil %>
+          <% if item.nil? %>
            <div class='sold-out'>
             <span>Sold Out!!</span>
            </div>
