--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -132,11 +132,11 @@
         <div class='item-img-content'>
           <%= image_tag item.image, class: "item-img" %>
 
-          <%# if item.nil? %>
+          <% if item.purchase != nil %>
            <div class='sold-out'>
             <span>Sold Out!!</span>
            </div>
-          <%# end %>
+          <% end %>
 
         </div>
         <div class='item-info'>
