--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -20,9 +20,11 @@
           クリックしてファイルをアップロード
         </p>
         <%= f.file_field :image, id:"item-image" %>
+         <div id="image-list"></div>
       </div>
     </div>
-    <%# /出品画像 %>
+   <%# /出品画像 %>
+
     <%# 商品名と商品説明 %>
     <div class="new-items">
       <div class="weight-bold-text">
@@ -134,12 +136,14 @@
       </p>
     </div>
     <%# /注意書き %>
+
     <%# 下部ボタン %>
     <div class="sell-btn-contents">
       <%= f.submit "出品する" ,class:"sell-btn" %>
       <%=link_to 'もどる', root_path, class:"back-btn" %>
     </div>
     <%# /下部ボタン %>
+    
   </div>
   <% end %>
 
