--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
 <%= render "shared/second-header"%>
 
-<%= form_with model: @user, url: edit_user_path, class: 'registration-main', method: :put, local: true do |f| %>
+<%= form_with model: @user, url: user_path, class: 'registration-main', method: :put, local: true do |f| %>
 
 <div class='form-wrap'>
   <div class='form-header'>
@@ -8,8 +8,6 @@
       会員情報入力
     </h1>
   </div>
-  
-  <%#<%= render 'shared/error_messages', model: f.object %>
 
   <div class="form-group">
     <div class='form-text-wrap'>
